infrastructure/vault/overlays/mgmt/vault-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - vault.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
